blue/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-blue
  namespace: default
spec:
  selector:
    app: demo-app
    release: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
